# thesis

./: .gitattributes  .gitignore  check_L_R.ipynb  compare_mist_parsec.ipynb  data_exploration.ipynb  data_preparation.ipynb  first_method.py  primary_model.ipynb  primary_model_nn.ipynb  pyproject.toml  requirements.txt  secondary_model.ipynb  utils.py
code/ML/: feature_selection.ipynb  first_method.py  old_primary_model.ipynb  primary_model.ipynb  primary_model_nn.ipynb  secondary_method.ipynb  utils.py
code/physics/: compare_mist_parsec.ipynb
data/MIST_v1.2_vvcrit0.0_basic_isos/: MIST_v1.2_feh_m0.25_afe_p0.0_vvcrit0.0_basic.iso  MIST_v1.2_feh_m0.50_afe_p0.0_vvcrit0.0_basic.iso  MIST_v1.2_feh_m0.75_afe_p0.0_vvcrit0.0_basic.iso  MIST_v1.2_feh_m1.00_afe_p0.0_vvcrit0.0_basic.iso  MIST_v1.2_feh_m1.25_afe_p0.0_vvcrit0.0_basic.iso  MIST_v1.2_feh_m1.50_afe_p0.0_vvcrit0.0_basic.iso  MIST_v1.2_feh_m1.75_afe_p0.0_vvcrit0.0_basic.iso  MIST_v1.2_feh_m2.00_afe_p0.0_vvcrit0.0_basic.iso  MIST_v1.2_feh_m2.50_afe_p0.0_vvcrit0.0_basic.iso  MIST_v1.2_feh_m3.00_afe_p0.0_vvcrit0.0_basic.iso  MIST_v1.2_feh_m3.50_afe_p0.0_vvcrit0.0_basic.iso  MIST_v1.2_feh_m4.00_afe_p0.0_vvcrit0.0_basic.iso  MIST_v1.2_feh_p0.00_afe_p0.0_vvcrit0.0_basic.iso  MIST_v1.2_feh_p0.25_afe_p0.0_vvcrit0.0_basic.iso  MIST_v1.2_feh_p0.50_afe_p0.0_vvcrit0.0_basic.iso
model/: readme.txt
notebooks/ML/: test.ipynb
notebooks/physics/: MIST_data_checking.ipynb  MIST_data_exploration.ipynb  check_L_R.ipynb  compare_mist_parsec.ipynb  data_exploration.ipynb
results/: readme.txt
src/: test.py
src/ML/utils/: utils.py  (+4 more)
(+379 files in other folders)
